Fix card text alignment

--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -17,6 +17,7 @@
   width: 10em;
   background: #343237;
   margin: 2em;
+  text-align: left;
 
   & p {
     margin-left: 6px !important;
